# OnCallAssistant

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: data-pipeline.md  design-v2.md  extraction-prompt.md  oncall-assistant-poc.html
infra/terraform/: README.md
src/oncall/: __init__.py  llm.py  prompts.py
src/oncall/bot/: README.md
src/oncall/eval/: validate.py
src/oncall/extract/: extract.py
src/oncall/ingest/: normalize.py  slack_export.py
src/oncall/lambdas/: lambda-handler-questions.py  lambda-post-events.py
src/oncall/retrieval/: README.md  answer.py  embeddings.py  index.py  store.py
tests/: __init__.py  test_normalize.py  test_retrieval.py
