[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "oncall-assistant"
version = "0.1.0"
description = "AI-powered on-call assistant for the Loyalty platform"
requires-python = ">=3.10"
dependencies = ["slack_sdk>=3.27", "boto3>=1.34", "numpy>=1.26"]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.5"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
